Dashboard No Data View + Owner Info Fixes
-- TEAS labels vertical-alignment
--Dashboard View with no data
-- Owner Info all Entity Types: layout fix, cropped in smaller browser widths, missing required attributes
-- 'All filing info...' text added
-- input 'height' CSS property fix for Chrome/PC
-- Owner Info 'Select from Contacts' Button + 'Clear Form' Button side-by-side
-- Added Puerto Rico + N/A to Owner Info select lists
-- TEAS Toggle alignment and U/L case fix
-- font-size / font-family Chrome/PC fix
-- Dashboard Alert paragraph CSS added from local files
-- Needed: So far ‘Next’ in Owner Info produces only the following issue: when Partnership is selected, User needs to be alerted if they click ‘Next’ without selecting Partnership Selections (reason why ‘Next’ doesn’t work for User), Same with ’Limited Partnership”. Joint Venture: User cannot advance without selecting “Yes” to “Does the joint venture have any active members?” but theres no ‘required’ attribute in the select list, so this is maybe a backend issue. Trust: User needs an alert for not being able to advance without completing Trustee Info. Estate: User needs an alert that that can’t advance without completing executor info. Before adding ‘required’ attributes to the HTML I’ll need confirmation that the above selections are required.

Select from Contacts + Clear Form Buttons re-code properly, current is for visual presentation only (inlinebuttons BS code doesn't allow for margin between the two buttons as per A11Y requirements

--- a/PTO-WEB/src/main/resources/static/resources/css/reset.css
+++ b/PTO-WEB/src/main/resources/static/resources/css/reset.css
@@ -15,7 +15,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	/*font-family: inherit;*/
 	}
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
